# agent-blueprint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  publish.yml
docs/: abp-vnext-implementation-plan.md  abp-vnext-rfc.md  deploy.md  mcp-servers.md  memory.md  model-providers.md  native-vs-graph-reasoning.md  rag.md  reasoning.md  releasing.md  tools.md
examples/: basic-chatbot.yml  coffee-barista-agentic-r1.yml  coffee-barista-agentic.yml  coffee-barista.yml  customer-support.yml  multi-agent-scenario-ideas.md  research-team.yml
examples/coffee_barista/: tools.py
src/agent_blueprint/: __init__.py  doctoring.py  exceptions.py  harness_runner.py  linting.py  trace.py
src/agent_blueprint/cli/: app.py  deploy_cmd.py  doctor_cmd.py  fix_cmd.py  generate.py  github_cmd.py  init_cmd.py  inspect_cmd.py  lint_cmd.py  run_cmd.py  schema.py  test_cmd.py  ui_cmd.py  validate.py
src/agent_blueprint/deployers/: __init__.py  aws.py  azure.py  base.py  docker.py  gcp.py  packager.py  secrets.py
src/agent_blueprint/generators/: __init__.py  base.py  crewai.py  langgraph.py  plain.py
src/agent_blueprint/ir/: __init__.py  compiler.py  expression.py
src/agent_blueprint/models/: __init__.py  agents.py  blueprint.py  contracts.py  deploy.py  graph.py  harness.py  mcp.py  memory.py  providers.py  retrievers.py  state.py  tools.py
src/agent_blueprint/runners/: local.py
src/agent_blueprint/templates/deploy/: .dockerignore.j2  (+3 more)
src/agent_blueprint/ui/: __init__.py  server.py
src/agent_blueprint/utils/: graph_viz.py  yaml_loader.py
tests/: conftest.py  test_harness_runner.py
tests/fixtures/: basic_chatbot.yml  customer_support.yml  deploy_agent.yml  impl_tools.yml  invalid_missing_agent.yml  mcp_tools.yml  memory_postgres.yml  memory_redis.yml  memory_sqlite.yml  model_providers.yml  rag_agent.yml  reasoning_agent.yml  reasoning_openai.yml
tests/test_cli/: test_app.py  test_doctor_cmd.py  test_init_cmd.py  test_lint_cmd.py  test_test_cmd.py
tests/test_deployers/: test_deployers.py  test_packager.py  test_secrets.py
tests/test_generators/: test_langgraph.py
tests/test_ir/: test_compiler.py  test_expression.py
tests/test_models/: test_blueprint.py  test_providers.py  test_trace.py
tests/test_runners/: test_local_runner.py
tests/test_utils/: test_dotenv.py
(+11 files in other folders)
